--- a/Services/01-simple.yaml
+++ b/Services/01-simple.yaml
@@ -2,3 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: welcome-loadbalancer
+spec:
+  selector:
+    app: welcome
+  type: LoadBalancer
+  ports:
+  - port: 19080
+    targetPort: 80    
