--- a/Services/02-nodeport.yaml
+++ b/Services/02-nodeport.yaml
@@ -4,4 +4,9 @@ metadata:
   name: welcome-nodeport
 spec:
   selector:
-   app: welcome  
+    app: welcome
+  type: NodePort
+  ports:
+  - port: 80
+    targetPort: 80
+    nodePort: 30080
