--- a/Services/03-ingressroute.yaml
+++ b/Services/03-ingressroute.yaml
@@ -3,4 +3,11 @@ kind: IngressRoute
 metadata:
   name: demo-a-ingress-nontls
 spec:
-  entryPoints:  
+  entryPoints:
+  - web
+  routes:
+  - match: Host(`welcome.trainer.container-training.de`)
+    kind: Rule
+    services:
+    - name: welcome-cluster
+      port: 80
