--- a/Services/04-cluster.yaml
+++ b/Services/04-cluster.yaml
@@ -4,5 +4,8 @@ metadata:
   name: welcome-cluster
 spec:
   selector:
-   app: welcome
-  type:
+    app: welcome
+  type: ClusterIP
+  ports:
+  - port: 80
+    targetPort: 80
