--- a/Volume/Deployment.yaml
+++ b/Volume/Deployment.yaml
@@ -15,3 +15,11 @@ spec:
       containers:
       - name: app
         image: fpommerening/docker-training:latest
+        volumeMounts:
+        - name: webdata
+          mountPath: "/usr/share/nginx/html/share/"
+      volumes:
+      - name: webdata
+        persistentVolumeClaim:
+          claimName: my-share-pvc
+      
