--- a/Volume/PersistentVolumesClaim.yaml
+++ b/Volume/PersistentVolumesClaim.yaml
@@ -2,5 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: my-share-pvc
-
 spec:
+  storageClassName: local-path
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Mi
