--- a/Updates/Canary/07-TraefikService.yaml
+++ b/Updates/Canary/07-TraefikService.yaml
@@ -4,3 +4,14 @@ metadata:
   name: canary-webapp-traefik-service
   namespace: default
 spec:
+  weighted:
+    services:
+      - name: webapp-v1-srv
+        port: 80
+        weight: 10
+      - name: webapp-v2-srv
+        port: 80
+        weight: 20
+      - name: webapp-v3-srv
+        port: 80
+        weight: 40
