--- a/Prometheus/12-App-Service.yaml
+++ b/Prometheus/12-App-Service.yaml
@@ -3,10 +3,10 @@ apiVersion: v1
 metadata:
   name: cafeteria-app-service
   labels:
-    app: cafeteria-app
+    app: autoscale-cafeteria-app
 spec:
   selector:
-    app: cafeteria-app
+    app: autoscale-cafeteria-app
   ports:
   - name: http
     port: 80
