Add prometheus samples

--- a/Prometheus/30-App-HorizontalPodAutoscaler.yaml
+++ b/Prometheus/30-App-HorizontalPodAutoscaler.yaml
@@ -4,3 +4,16 @@ metadata:
   name: cafeteria-autoscaler
 spec:
   scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: autoscale-cafeteria-dep
+  minReplicas: 1
+  maxReplicas: 5
+  metrics:
+    - type: Pods
+      pods:
+        metric:
+          name: order_items_to_process_count
+        target:
+          type: AverageValue
+          averageValue: 10
