--- a/Prometheus/20-App-Servicemonitor.yaml
+++ b/Prometheus/20-App-Servicemonitor.yaml
@@ -2,4 +2,11 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: cafeteria-app-service-monitor
- 
+  labels:
+    release: prometheus
+spec:
+  selector:
+    matchLabels:
+      app: autoscale-cafeteria-app
+  endpoints:
+  - port: http
