add prepare volume

--- a/Volume/Deployment.yaml
+++ b/Volume/Deployment.yaml
@@ -1,17 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: shared-web-dep
+  name: volume-web-dep
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: shared-web-app
+      app: volume-web-app
   template:
     metadata:
       labels:
-        app: shared-web-app
+        app: volume-web-app
     spec:
       containers:
       - name: app
         image: fpommerening/docker-training:latest
+        
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: editor-pod
+spec:
+  containers:
+  - name: editor
+    image: fpommerening/docker-training:editor
+        
